--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Parallax IDE</title>
+    <title>Perpendiculax IDE</title>
     <link href="fonts/roboto.css" rel="stylesheet" type="text/css">
     <link href="fonts/ionicons.css" rel="stylesheet" type="text/css">
 
